# iso3166-ingest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
manifests/: .sops.yaml  wftmpl.yaml
notebooks/: iso3166-ingest.ipynb
