[project]
name = "iso3166-ingest"
version = "v1.0.0"
description = "Example code and user interface for the iso3166 data pipeline."
authors = [ { name = "Michael Tiemann", email = "72577720+MichaelTiemannOSC@users.noreply.github.com" } ]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
  "Climate",
  "iso3166",
  "Finance"
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = [
  "jupyterlab==4.0.11",
  "osc-ingest-tools>=0.5.2",
  "pycountry",
  "pandas",
  "numpy",
  "click",
  "python-dotenv>=0.5.1"
]

[project.urls]
Homepage = "https://github.com/os-climate/iso3166-ingest"
Repository = "https://github.com/os-climate/iso3166-ingest"
Downloads = "https://github.com/os-climate/iso3166-ingest/releases"
"Bug Tracker" = "https://github.com/os-climate/iso3166-ingest/issues"
Documentation = "https://github.com/os-climate/iso3166-ingest/tree/main/docs"
"Source Code" = "https://github.com/os-climate/iso3166-ingest"

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = [
  "pdm[pytest]",
  "pdm[publish]",
  "pytest-cov"
]
tox = [
  "tox",
  "tox-pdm>=0.5"
]
doc = [ "sphinx" ]
dev = [
  "tox>=4.11.3",
  "tox-pdm>=0.7.0"
]

[tool.pytest.ini_options]
testpaths = [ "test/" ]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
